# MCQ4U-api

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci.yaml.txt  deploy.yml
app/: main.py
app/controllers/: __init__.py  users.py
app/db/: __init__.py
app/question/controllers/: __init__.py
app/question/domains/: __init__.py
app/question/models/: __init__.py
app/question/services/: __init__.py
app/shared/: __init__.py  constants.py  logger.py  middlewares.py  types.py  utils.py
app/user/controllers/: __init__.py
app/user/domains/: __init__.py
app/user/models/: __init__.py
app/user/services/: __init__.py
app/users/controllers/: __init__.py  users.py
app/users/domain/: users.py
app/users/models/: __init__.py
app/users/services/: __init__.py  users.py
tests/: test_app.py
wiki/: Home.md
